[package]
name = "onlydevs-lrs"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
actix-web-prom = { version = "0.8.0", features = ["process"] }
anyhow = "1.0.79"
async-trait = "0.1.77"
clickhouse = { version = "0.11.6", features = ["time"] }
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.5.1"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls"] }
time = { version = "0.3.31", features = ["serde"] }
